apps/media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
  annotations:
    fluxcd.io/automated: "true" # Enable automated image updates
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080 # Web UI
            - containerPort: 6881 # Torrent
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: qbittorrent
            - name: downloads
              mountPath: /downloads
            - name: complete
              mountPath: /complete
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
        - name: complete
          persistentVolumeClaim:
            claimName: complete-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
